--- a/service/article/src/main/resources/application.yml
+++ b/service/article/src/main/resources/application.yml
@@ -1,1 +1,16 @@
 server.port: 9000
+
+spring:
+  application:
+    name: kafka-board-article-service
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/article
+    username: root
+    password: root
+  jpa:
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+    open-in-view: false
+    show-sql: true
+    hibernate:
+      ddl-auto: none
