--- a/service/article/src/main/resources/application.yml
+++ b/service/article/src/main/resources/application.yml
@@ -11,6 +11,6 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     open-in-view: false
-    show-sql: true
+    show-sql: false
     hibernate:
       ddl-auto: none
