--- a/service/like/src/main/resources/application.yml
+++ b/service/like/src/main/resources/application.yml
@@ -1,1 +1,16 @@
 server.port: 9002
+
+spring:
+  application:
+    name: kafka-board-like-service
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/article_like
+    username: root
+    password: root
+  jpa:
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+    open-in-view: false
+    show-sql: false
+    hibernate:
+      ddl-auto: none
